fixed path name for a font, changed mobile hamburger nav to primary colour, reduced the intro section font size from 4rem to 3.5rem on mobile sizes

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: "Aileron-Semibold";
-  src: url("../assets/fonts/Aileron-Semibold.otf");
+  src: url("../assets/fonts/Aileron-SemiBold.otf");
 }
 
 @font-face {
