--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -18,7 +18,7 @@
   transition: 0.4s all ease;
 
   .btn-line {
-    border-bottom: 0.33rem solid $true-white;
+    border-bottom: 0.33rem solid $primary-purp;
     position: absolute;
     display: block;
     width: 100%;
